Added css to html pages

--- a/boards.html
+++ b/boards.html
@@ -7,6 +7,8 @@
     <!-- pick the meta type -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- chose css style sheet-->
+    <link rel="stylesheet" href="main.css">
     <!-- chose a title -->
     <title>Boards Page - Assignment 1.1: The Foundation</title>
 </head>
