--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Assignment 1.1: The Foundation</title>
+    <title>Index Page - Assignment 1.1: The Foundation</title>
 </head>
 <body>
     <p>Index Page - This page is for <b>Assignment 1.1: The Foundation</b></p><br>
