--- a/boards.html
+++ b/boards.html
@@ -5,7 +5,7 @@
     <!-- Begin Type -->
 <head>
     <!-- chose css style sheet-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
     <!-- pick the meta type -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
