--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         <img id="memeImage" src="Project_Due.jpg">
     
     </p>
+    <p> Click <a href="index.html">here</a> Index.html</p>
+    <p> Click <a href="boards.html">here</a> Boards.html</p>
+    <p> Click <a href="first.html">here</a> first.html</p>
+    <p> Click <a href="myProject.html">here</a> myProject.html</p>
+    <p> Click <a href="First Live W1.html">here</a> Firsd Live W1.html</p>
+    <p> Click <a href="functions.html">here</a> Functions.html</p>
+    <p> Click <a href="first_css.css">here</a> first_css.css</p>
+    <p> Click <a href="main.css">here</a> main.css</p>
 </body>
 </html>
