--- a/functions.html
+++ b/functions.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="first_css.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="first_css.css">
-   <h1>  fourth Website     </h1> 
+   <h1>  Fourth Website     </h1> 
     <h2 style = color:aquamarine> heading 2
         <h3> <b>  Heading 3 </b> </h3>
         <p style = "font-style:italic;"> This is a paragraph
