edited main css

--- a/functions.html
+++ b/functions.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="first_css.css">
+<link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +9,7 @@
     <script src="craps.js"></script>
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="first_css.css">
+<link rel="stylesheet" type="text/css" href="main.css">
    <h1>  Fourth Website     </h1> 
     <h2 style = color:aquamarine> heading 2
         <h3> <b>  Heading 3 </b> </h3>
