now Im just messing around

--- a/functions.html
+++ b/functions.html
@@ -9,7 +9,7 @@
     <script src="craps.js"></script>
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="first_css.css">
    <h1>  Fourth Website     </h1> 
     <h2 style = color:aquamarine> heading 2
         <h3> <b>  Heading 3 </b> </h3>
