added file.html and changed index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page - Assignment 1.1: The Foundation</title>
+    <title>Index Page - Javascript Assignments</title>
 </head>
 <body>
-    <p>Index Page - This page is for <b>Assignment 1.1: The Foundation</b></p><br>
-    <p><h2>Due Monday by 1:59am </h2></p> <br>
-    <p>
+    <p>Index Page - This page is for <b>Javascript Assignment Indexing</b></p><br>
+        <p>
 
         <img id="memeImage" src="Project_Due.jpg">
     
@@ -22,5 +21,6 @@
     <p> Click <a href="functions.html">here</a> Functions.html</p>
     <p> Click <a href="first_css.css">here</a> first_css.css</p>
     <p> Click <a href="main.css">here</a> main.css</p>
+    <p> Click <a href="file.html">here</a> file.html</p>
 </body>
 </html>
