added button to file.html

--- a/file.html
+++ b/file.html
@@ -16,7 +16,7 @@
             
             <h2>DOM console.log() Method</h2>
             <p>
-                To view the message in the console
+                To view the message in the debug console
                 press the F12 key on your keyboard.
             </p>
             <p>
