chnged file.html

--- a/file.html
+++ b/file.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="main.css">
-   <h1>  file.js debug page </h1> 
+   <h1>  file.js debug page.</h1> 
     
         <p style = "font-style:italic;"> This page is for the lecture on Feb 22, 2024
             
