--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <p> Click <a href="functions.html">here</a> Functions.html</p>
     <p> Click <a href="first_css.css">here</a> first_css.css</p>
     <p> Click <a href="main.css">here</a> main.css</p>
-    <p> Click <a href="file.html">here</a> file.html</p>
+    <p> Click <a href="file.html">here</a> file.html -</p>
 </body>
 </html>
