Variables and Operators added

--- a/newhtml.html
+++ b/newhtml.html
@@ -58,9 +58,9 @@
 
     <!--<button type="button" onclick="document.getElementById('sample').innerHTML = 'Stephen is, but he is catching up'">Whos Behind</button>-->
 
-        <script>
+        <!--<script>
             window.alert("LateLateLATE");
             console.log("SooooLate");
-            </script>
+            </script>-->
 </body>
 </html>
