create game.css and commented game.html

--- a/game.html
+++ b/game.html
@@ -1,15 +1,29 @@
+<!--Stephen Sargent Assignment 2.1-->
+<!-- reveal document type-->
 <!DOCTYPE html>
+<!-- language selector-->
 <html lang="en">
+    <!--begin head messages-->
 <head>
+    <!--select charset for older browsers-->
     <meta charset="UTF-8">
+    <!--select viewport and inital scale for devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--title of this ducument-->
     <title>Game Assignment 2.1</title>
-    <link rel="stylesheet" href="./file.css">
+    <!--select the external style sheet-->
+    <link rel="stylesheet" href="./game.css">
+    <!--external javascript file-->
     <script src="./code.js"></script>
+    <!--close the head-->
 </head>
+<!--begin body of this document-->
 <body>
+    <!--simple greeting with a larger text-->
     <p><h1>Welcome to Game Assignmnent 2.1</h1></p>
+    <!--add a little space between title and button-->
     <p></p>
+    <!--begin our headache I mean fun stuff-->
     <button type="button" onclick="document.getElementById('game').innerHTML = 'The most boring game in the world'">What game is this</button>
 
 </body>
