comments in game.html

--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
     <!--add a little space between title and button-->
     <p></p>
     <!--begin our headache I mean fun stuff-->
+    <!--we may not chose a game checking alternate acceptable assignments-->
     <button type="button" onclick="document.getElementById('game').innerHTML = 'The most boring game in the world'">What game is this</button>
 
 </body>
