more comments in game html

--- a/game.html
+++ b/game.html
@@ -26,6 +26,7 @@
     <!--begin our headache I mean fun stuff-->
     <!--we may not chose a game checking alternate acceptable assignments-->
     <button type="button" onclick="document.getElementById('game').innerHTML = 'The most boring game in the world'">What game is this</button>
-
+<!-- close our body text and scripts-->
 </body>
+<!--end the document-->
 </html>
