--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <!--begin head messages-->
 <head>
-    <!--select charset for older browsers-->
+    <!--select charset for devices-->
     <meta charset="UTF-8">
     <!--select viewport and inital scale for devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,10 +23,21 @@
     <p><h1>Welcome to Game Assignmnent 2.1</h1></p>
     <!--add a little space between title and button-->
     <p></p>
+    The game is Craps..the one game that can leave everyone hitch-hiking home<br>
+    from Vegas, or worse..washing dishes for life!<br>
+    <p></p>
+    <p></p>
     <!--begin our headache I mean fun stuff-->
-    <!--we may not chose a game checking alternate acceptable assignments-->
-    <button type="button" onclick="document.getElementById('game').innerHTML = 'The most boring game in the world'">What game is this</button>
-<!-- close our body text and scripts-->
+    <!--We chose the craps.js functions to use in our game-->
+    <!--we modified it from its original boring form-->
+    <!--having ahard time changing the button color using css or javascript-->
+    <button onclick="play()" button.style.backgroundColor = "red" class = "crapsButton">play</button>   
+    <div id="die1Res">Die1 results here...</div>
+    <div id="die2Res">Die2 results here...</div>
+    <div id="sumRes">Sum results here...</div>
+    <div id="finalRes">Final results here...</div>  
+
+    <!-- close our body text and scripts-->
 </body>
 <!--end the document-->
 </html>
